# OOP_Basics

Calendar Event/: CMakeLists.txt
Calendar Event/lib/: CMakelists.txt  calendar.cpp  event.cpp
Calendar Event/lib/inc/: calendar.hpp  event.hpp
Calendar Event/src/: CMakeLists.txt  main.cpp
Cinema/: CMakeLists.txt
Cinema/lib/: CMakeLists.txt  city.cpp  theater.cpp
Cinema/lib/inc/: city.hpp  theater.hpp
Cinema/src/: CMakeLists.txt  main.cpp
GPS Location/: CMakeLists.txt
GPS Location/lib/: CMakeLists.txt  gps.cpp
GPS Location/lib/inc/: gps.hpp
GPS Location/src/: CMakeLists.txt  main.cpp
Game Character/: CMakeLists.txt
Game Character/lib/: CMakeLists.txt  character.cpp  game.cpp
Game Character/lib/inc/: character.hpp  game.hpp
Game Character/src/: CMakeLists.txt  main.cpp
Medical Patient/: CMakeLists.txt
Medical Patient/lib/: CMakeLists.txt  hospital.cpp  patient.cpp
Medical Patient/lib/inc/: hospital.hpp  patient.hpp
Medical Patient/src/: CMakeLists.txt  main.cpp
Night sky/: CMakeLists.txt
Night sky/lib/: CMakeLists.txt  sky.cpp  star.cpp
Night sky/lib/inc/: sky.hpp  star.hpp
Night sky/src/: CMakeLists.txt  main.cpp
Tic-Tac-Toe/: CMakeLists.txt
Tic-Tac-Toe/lib/: CMakeLists.txt  TicTacToe.cpp
Tic-Tac-Toe/lib/inc/: TicTacToe.hpp
Tic-Tac-Toe/src/: CMakeLists.txt  main.cpp
